--- a/templates/administration/location_list.html
+++ b/templates/administration/location_list.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
 {% block content %}
 <div style="margin-top:15px;">
   <h2 class="text-center">Standortliste</h2>
 </div>
 
 {% for object in object_list reversed %}
-<div class="card border-info mb-3 w-100">
+<div class="card border-info mb-3 w-50 mx-auto">
   <div class="card-body">
     <div class="container">
       <div class="row">
