--- a/templates/administration/location_list.html
+++ b/templates/administration/location_list.html
@@ -4,9 +4,9 @@
   <h2 class="text-center">Standortliste</h2>
 </div>
 
-{% for object in object_list reversed %}
-<div class="card border-info mb-3 w-50 mx-auto">
-  <div class="card-body">
+{% for object in object_list reversed %} 
+<div class="card border-info mb-3  mx-auto" style="width: 45rem;">
+  <div class="card-body"> 
     <div class="container">
       <div class="row">
         <div class="card w-2 border-0">
