--- a/templates/patient/patient_detail.html
+++ b/templates/patient/patient_detail.html
@@ -6,7 +6,7 @@
 </div>
 <form action='.' method='POST'>
     {% csrf_token %}
-    <div class="card border-info mb-3 w-75">
+    <div class="card border-info mb-3 w-50 mx-auto"> 
         <div class="card-header"> Patient ID: {{ object.id }} </div>
         <div class="card-body">
             <ul class="list-group list-group-flush"> 
