--- a/templates/patient/patient_merge.html
+++ b/templates/patient/patient_merge.html
@@ -5,7 +5,7 @@
 <h2 class="text-center">Patient zusammenführen</h2>{% csrf_token %}
 </div>
 
-<div class="card-deck" style="width:auto">
+<div class="card-deck mb-3 mx-auto" style="width:auto"> 
     <div class="card border-info">
         <div class="card-body">
             <p> Mit dieser Funktion können die DICOM Studien von verdoppelten oder fehlerhaften Patienten in einem
