--- a/templates/worklists/worklist_create.html
+++ b/templates/worklists/worklist_create.html
@@ -18,7 +18,7 @@
  
 <form id='worklist-form' method='POST'> {% csrf_token %}
     <input type="hidden" name="patient_id" id="id_patient_id" value='{{ patient.id }}' readonly>
-    <div class="card border-info mb-3">
+    <div class="card border-info mb-3 w-50 mx-auto"> 
         <div class="card-body">
             <div class="container">
                 <div class="row">
