--- a/templates/modality/detail.html
+++ b/templates/modality/detail.html
@@ -5,7 +5,7 @@
     <h2 class="text-center"> Modalität bearbeiten</h2>
 </div>
 <form action='.' method='POST'> {% csrf_token %}
-    <div class="card border-info mb-3">
+    <div class="card border-info mb-3 w-50 mx-auto">
         <div class="card-body">
             <div class="container">
                 <div class="row">
