--- a/templates/modality/modality_delete.html
+++ b/templates/modality/modality_delete.html
@@ -6,8 +6,8 @@
 <h2 class="text-center">Modalität entfernen</h2>
 </div>
 <form method='POST'> {% csrf_token %}
-    <h4> Möchten Sie die Modalität {{ object.ae_title}} entfernen?</h4>
-    <div class="card border-info mb-3 w-100" >
+   
+    <div class="card border-info mb-3 mx-auto" style="width: 45rem;"> 
         <div class="card-body">
         <div class="container">
           <div class="row">
@@ -17,15 +17,15 @@
             </div>
           </div>
           <div class="col-15">
-            <h5 class="card-title">AE-Titel: {{object.ae_title}} </h5>
+            <h5 class="card-title">Möchten Sie die Modalität {{ object.ae_title}} entfernen?</h5>
           </div>
           </div>
         </div>          
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Typ: {{ object.title }}</li>
-              <li class="list-group-item">Beschreibung: {{ object.description }}</li>
-              <li class="list-group-item">IP Adresse: {{ object.ip }}, Port Nummer: {{ object.port }}</li>
-              <li class="list-group-item">Standort: {{ object.associate_location.get_location_representation }}</li>
+              <li class="list-group-item py-1">Typ: {{ object.title }}</li>
+              <li class="list-group-item py-1">Beschreibung: {{ object.description }}</li>
+              <li class="list-group-item py-1">IP Adresse: {{ object.ip }}, Port Nummer: {{ object.port }}</li>
+              <li class="list-group-item py-1">Standort: {{ object.associate_location.get_location_representation }}</li>
             </ul>  
            <input type='submit' class="btn btn-outline-primary"  value ='Ja'/>
     <a href="{% url 'modalities' %}" class="btn btn-outline-primary" >Nein</a>
