--- a/templates/patient/patient_create.html
+++ b/templates/patient/patient_create.html
@@ -6,7 +6,7 @@
 </div>
 <form action='.' method='POST'> {% csrf_token %}
      
-    <div class="card border-info mb-3">
+    <div class="card border-info mb-3 w-50 mx-auto"> 
         <div class="card-body">
             <div class="container">
                 <div class="row">
