--- a/templates/patient/patient_list.html
+++ b/templates/patient/patient_list.html
@@ -15,7 +15,7 @@
 <h2 class="text-center">Patientenliste</h2>
 </div>
 {% for instance in object_list reversed %}
-<div class="card border-info mb-3 mx-auto" style="width: 65rem;"> 
+<div class="card border-info mb-3 mx-auto"> 
   <div class="card-body">
     <div class="container">
       <div class="row">
